After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 675254 - meta_window_move_frame(): fix crash when frame is NULL
meta_window_move_frame(): fix crash when frame is NULL
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-05-01 17:44 UTC by Owen Taylor
Modified: 2012-05-01 18:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
meta_window_move_frame(): fix crash when frame is NULL (1.73 KB, patch)
2012-05-01 17:44 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2012-05-01 17:44:34 UTC
This was reported on gnome-shell-list by clemens lab21 org
Comment 1 Owen Taylor 2012-05-01 17:44:36 UTC
Created attachment 213225 [details] [review]
meta_window_move_frame(): fix crash when frame is NULL

When meta_frame_calc_borders() was made to take a NULL frame argument,
a crash was accidentally introduced into meta_window_move_frame().

This partially reverts 8c1b2d5.
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-05-01 18:27:44 UTC
Review of attachment 213225 [details] [review]:

Yes.
Comment 3 Owen Taylor 2012-05-01 18:30:56 UTC
Attachment 213225 [details] pushed as c669a38 - meta_window_move_frame(): fix crash when frame is NULL